syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.ddm.demo.proto.user";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  bool is_active = 4;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  string user_id = 1;
  bool success = 2;
  string message = 3;
}
